--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"/>
 
+            <com.google.android.material.button.MaterialButton
+                android:padding="10dp"
+                android:id="@+id/bt_preview"
+                android:textColor="@color/white"
+                android:text="img preview"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/>
+
+            <ImageView
+                android:id="@+id/iv"
+                android:layout_width="200dp"
+                android:layout_height="300dp"
+                android:src="@mipmap/ic_launcher_round"/>
+
+            <Button
+                android:id="@+id/bt_openImage"
+                android:text="openImage"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/permission"
+                android:text="permission"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.core.widget.NestedScrollView>
