common_base_util:新增倒计时工具类 common_base_ui: 新增部分扩展方法

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,15 @@
 
             <com.google.android.material.button.MaterialButton
                 android:padding="10dp"
+                android:id="@+id/bt_interval"
+                android:textColor="@color/white"
+                android:text="go Interval"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:padding="10dp"
                 android:id="@+id/bt_preview"
                 android:textColor="@color/white"
                 android:text="img preview"
