--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
 
             <ImageView
                 android:id="@+id/iv"
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher_round"/>
@@ -89,6 +89,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 tools:background="@color/black"/>
+
+            <Button
+                android:id="@+id/spannable"
+                android:text="spannable"
+                android:onClick="onSpannable"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
