--- a/app/src/main/res/layout/ac_spannable.xml
+++ b/app/src/main/res/layout/ac_spannable.xml
@@ -1,39 +1,259 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+       <androidx.appcompat.widget.LinearLayoutCompat
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+           <TextView
+               android:id="@+id/tv"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/tv3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+           <TextView
+               android:id="@+id/tv2"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/tv4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+           <TextView
+               android:id="@+id/tv3"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/tv5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+           <TextView
+               android:id="@+id/tv4"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"/>
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+           <TextView
+               android:id="@+id/tv5"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"/>
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="vertical">
+
+               <com.fido.common.common_base_ui.widget.edittext.CodeEditText
+                   android:id="@+id/et_test"
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   android:layout_margin="10dp"
+                   android:layout_marginTop="20dp"
+                   android:focusable="true"
+                   android:focusableInTouchMode="true"
+                   android:inputType="number"
+                   android:maxLength="6"
+                   android:paddingLeft="10dp"
+                   android:paddingRight="10dp"
+                   app:blockErrorColor="@android:color/holo_red_light"
+                   app:blockFocusColor="@android:color/holo_blue_bright"
+                   app:blockLineWidth="1dp"
+                   app:blockNormalColor="@android:color/black"
+                   app:blockShape="underline"
+                   app:blockSpace="15dp"
+                   app:codeInputType="text"
+                   app:codeTextColor="@android:color/black"
+                   app:codeTextSize="30sp"
+                   app:cursorHeight="30dp"
+                   app:cursorWidth="4dp"
+                   app:maxCodeLength="6"
+                   app:showCursor="false"
+                   tools:text="" />
+
+
+               <com.fido.common.common_base_ui.widget.edittext.CodeEditText
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   android:layout_margin="10dp"
+                   android:layout_marginTop="20dp"
+                   android:focusable="true"
+                   android:focusableInTouchMode="true"
+                   android:maxLength="6"
+                   android:paddingLeft="10dp"
+                   android:paddingRight="10dp"
+                   app:blockErrorColor="@android:color/holo_red_light"
+                   app:blockFocusColor="@android:color/holo_blue_bright"
+                   app:blockLineWidth="1dp"
+                   app:blockNormalColor="@android:color/black"
+                   app:blockShape="underline"
+                   app:blockSpace="15dp"
+                   app:codeInputType="password"
+                   app:codeTextColor="@android:color/black"
+                   app:codeTextSize="30sp"
+                   app:cursorWidth="4dp"
+                   app:maxCodeLength="6"
+                   app:showCursor="true"
+                   tools:text="111" />
+
+               <com.fido.common.common_base_ui.widget.edittext.CodeEditText
+                   android:id="@+id/edit_pwd_stroke"
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   android:layout_margin="10dp"
+                   android:layout_marginTop="20dp"
+                   android:focusable="true"
+                   android:focusableInTouchMode="true"
+                   android:maxLength="6"
+                   android:paddingLeft="10dp"
+                   android:paddingRight="10dp"
+                   app:blockCorner="5dp"
+                   app:blockErrorColor="@android:color/holo_red_light"
+                   app:blockFocusColor="@android:color/holo_blue_bright"
+                   app:blockLineWidth="3dp"
+                   app:blockNormalColor="@android:color/black"
+                   app:blockShape="stroke"
+                   app:blockSpace="15dp"
+                   app:codeInputType="password"
+                   app:codeTextColor="@android:color/black"
+                   app:codeTextSize="30sp"
+                   app:cursorWidth="4dp"
+                   app:maxCodeLength="6"
+                   app:showCursor="true"
+                   tools:text="111" />
+
+               <com.fido.common.common_base_ui.widget.edittext.CodeEditText
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   android:layout_margin="10dp"
+                   android:layout_marginTop="20dp"
+                   android:focusable="true"
+                   android:focusableInTouchMode="true"
+                   android:maxLength="6"
+                   android:paddingLeft="10dp"
+                   android:paddingRight="10dp"
+                   app:blockCorner="5dp"
+                   app:blockErrorColor="@android:color/holo_red_light"
+                   app:blockFocusColor="@android:color/holo_blue_bright"
+                   app:blockLineWidth="3dp"
+                   app:blockNormalColor="@android:color/black"
+                   app:blockShape="stroke"
+                   app:blockSpace="15dp"
+                   app:codeInputType="text"
+                   app:codeTextColor="@android:color/black"
+                   app:codeTextSize="30sp"
+                   app:cursorWidth="4dp"
+                   app:maxCodeLength="6"
+                   app:showCursor="true"
+                   tools:text="111" />
+
+
+               <com.fido.common.common_base_ui.widget.edittext.CodeEditText
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   android:layout_margin="10dp"
+                   android:layout_marginTop="20dp"
+                   android:focusable="true"
+                   android:focusableInTouchMode="true"
+                   android:maxLength="6"
+                   android:paddingLeft="10dp"
+                   android:paddingRight="10dp"
+                   app:blockCorner="5dp"
+                   app:blockErrorColor="@android:color/holo_red_light"
+                   app:blockFocusColor="@android:color/holo_blue_bright"
+                   app:blockLineWidth="3dp"
+                   app:blockNormalColor="@android:color/black"
+                   app:blockShape="solid"
+                   app:blockSpace="15dp"
+                   app:codeInputType="password"
+                   app:codeTextColor="@android:color/white"
+                   app:codeTextSize="30sp"
+                   app:cursorWidth="4dp"
+                   app:dotRadius="8dp"
+                   app:maxCodeLength="6"
+                   app:showCursor="true"
+                   tools:text="111" />
+
+
+               <com.fido.common.common_base_ui.widget.edittext.CodeEditText
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   android:layout_margin="10dp"
+                   android:layout_marginTop="20dp"
+                   android:focusable="true"
+                   android:focusableInTouchMode="true"
+                   android:maxLength="6"
+                   android:paddingLeft="10dp"
+                   android:paddingRight="10dp"
+                   app:blockCorner="5dp"
+                   app:blockErrorColor="@android:color/holo_red_light"
+                   app:blockFocusColor="@android:color/holo_blue_bright"
+                   app:blockLineWidth="3dp"
+                   app:blockNormalColor="@android:color/black"
+                   app:blockShape="solid"
+                   app:blockSpace="15dp"
+                   app:codeInputType="text"
+                   app:codeTextColor="@android:color/white"
+                   app:codeTextSize="30sp"
+                   app:cursorWidth="4dp"
+                   app:maxCodeLength="6"
+                   app:showCursor="true"
+                   tools:text="111" />
+
+               <com.fido.common.common_base_ui.widget.edittext.CodeEditText
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   android:layout_margin="10dp"
+                   android:layout_marginTop="20dp"
+                   android:focusable="true"
+                   android:focusableInTouchMode="true"
+                   android:maxLength="6"
+                   android:paddingLeft="10dp"
+                   android:paddingRight="10dp"
+                   app:blockErrorColor="@android:color/holo_red_light"
+                   app:blockFocusColor="@android:color/holo_blue_bright"
+                   app:blockLineWidth="1dp"
+                   app:blockNormalColor="@android:color/black"
+                   app:blockShape="underline"
+                   app:blockSpace="15dp"
+                   app:codeInputType="text"
+                   app:codeTextColor="@android:color/black"
+                   app:codeTextSize="30sp"
+                   app:cursorWidth="4dp"
+                   app:maxCodeLength="6"
+                   app:showCursor="true"
+                   tools:text="111" />
+
+
+               <com.fido.common.common_base_ui.widget.edittext.CodeEditText
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   android:layout_margin="10dp"
+                   android:layout_marginTop="20dp"
+                   android:focusable="true"
+                   android:focusableInTouchMode="true"
+                   android:maxLength="6"
+                   android:paddingLeft="10dp"
+                   android:paddingRight="10dp"
+                   app:blockErrorColor="@android:color/holo_red_light"
+                   app:blockFocusColor="@android:color/holo_blue_bright"
+                   app:blockLineWidth="1dp"
+                   app:blockNormalColor="@android:color/black"
+                   app:blockShape="underline"
+                   app:blockSpace="15dp"
+                   app:codeInputType="password"
+                   app:codeTextColor="@android:color/black"
+                   app:codeTextSize="30sp"
+                   app:cursorWidth="4dp"
+                   app:maxCodeLength="6"
+                   app:showCursor="true"
+                   tools:text="111" />
+
+           </LinearLayout>
+
+       </androidx.appcompat.widget.LinearLayoutCompat>
+
+   </ScrollView>
 </layout>
