--- a/app/src/main/res/layout/dialog_test.xml
+++ b/app/src/main/res/layout/dialog_test.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:background="@color/white">
+        android:background="@color/black">
 
         <TextView
             android:id="@+id/tv_cancle"
@@ -17,6 +17,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="cancle"/>
 
         <TextView
@@ -25,6 +26,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="confirm"/>
 
         <ImageView
