--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#509C37</color>
+    <color name="colorPrimaryDark">#3E772B</color>
+    <color name="colorAccent">#BAD842</color>
+    <color name="colorTextBlack">#1C1D22</color>
+    <color name="colorTextBlack50">#801C1D22</color>
+    <color name="colorTextDiv">#7BA420</color>
+    <color name="colorWheelView">#8024AC83</color>
+    <color name="colorBgBtnText">#00B0FF</color>
+    <color name="colorBgBtnNormal">#60AB94</color>
+    <color name="colorBgBtnGray">#9EABAA</color>
+
 </resources>
