common_base_util: 新增部分方法 common_base_ui  : 新增部分方法

--- a/app/src/main/res/layout/item_rv_text.xml
+++ b/app/src/main/res/layout/item_rv_text.xml
@@ -12,7 +12,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/mTitle"
@@ -21,9 +23,23 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="18sp"
-            android:layout_width="match_parent"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content" />
 
+        <Button
+            android:id="@+id/bt_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="上移"/>
+
+        <Button
+            android:id="@+id/bt_down"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="下移"/>
     </LinearLayout>
 
 </layout>
