--- a/app/src/main/res/layout/ac_rv.xml
+++ b/app/src/main/res/layout/ac_rv.xml
@@ -14,6 +14,13 @@
         tools:context=".MainActivity">
 
         <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:onClick="goDrag"
+            android:text="go drag Rv Ac"/>
+
+        <Button
             android:id="@+id/bt_first"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
