--- a/app/src/main/res/layout/ac_rv_drag_swipe.xml
+++ b/app/src/main/res/layout/ac_rv_drag_swipe.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,10 +10,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:layout_marginTop="30dp"
+            android:id="@+id/bt_recevie"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="recevie"/>
+
+        <androidx.constraintlayout.utils.widget.ImageFilterView
+            android:id="@+id/mIv"
+            app:round="10dp"
+            app:layout_constraintTop_toBottomOf="@id/bt_recevie"
+            app:layout_constraintLeft_toLeftOf="@id/bt_recevie"
+            android:src="@mipmap/ic_launcher_round"
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mRv"
+            app:layout_constraintTop_toBottomOf="@id/mIv"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
