--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,6 +159,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
+            <Button
+                android:text="ConstraintLayout"
+                android:onClick="ConstraintLayout"
+                android:textAllCaps="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
             <TimePicker
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
