--- a/app/src/main/res/layout/ac_rv.xml
+++ b/app/src/main/res/layout/ac_rv.xml
@@ -39,12 +39,12 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <com.fido.common.common_base_ui.base.widget.SmartRefreshRecyclerView
+        <!--<com.fido.common.common_base_ui.base.widget.SmartRefreshRecyclerView
             android:id="@+id/mSRv"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"/>-->
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
