common_base_util: common_base_ui  : 新增younth banner

--- a/app/src/main/res/layout/ac_view_model.xml
+++ b/app/src/main/res/layout/ac_view_model.xml
@@ -34,6 +34,7 @@
         -->
         <EditText
             android:id="@+id/mInput"
+            onTextChanged="@{clickProxy.action}"
             app:layout_constraintTop_toBottomOf="@id/tip"
             android:text="@={viewModel.MResult}"
             app:layout_constraintLeft_toLeftOf="parent"
