common_base_util: common_base_ui  : easy_navigation : 完成部分扩展方法 groovy_lib      : 新增部分测试代码

--- a/app/src/main/res/layout/ac_rv.xml
+++ b/app/src/main/res/layout/ac_rv.xml
@@ -27,6 +27,13 @@
             android:textAllCaps="false"
             android:text="show smartRefreshRv"/>
 
+        <Button
+            android:id="@+id/bt_scroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="scroll pos"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mRv"
             android:layout_width="match_parent"
