--- a/app/src/main/res/layout/ac_banner.xml
+++ b/app/src/main/res/layout/ac_banner.xml
@@ -28,5 +28,14 @@
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <com.youth.banner.Banner
+            android:id="@+id/banner2"
+            app:layout_constraintTop_toBottomOf="@id/banner"
+            android:layout_width="120dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="50dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
