common_base_util: 新增部分扩展工具类 common_base_ui  : 新增部分扩展方法

--- a/app/src/main/res/layout/ac_constraintlayout.xml
+++ b/app/src/main/res/layout/ac_constraintlayout.xml
@@ -280,7 +280,7 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     android:gravity="center"
                     android:background="#eee"
-                    android:text=" TextView TextViewTextViewTextViewTextViewTextViewTextView"/>
+                    android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"/>
 
 
                 <TextView
