--- a/app/src/main/res/layout/item_rv_text.xml
+++ b/app/src/main/res/layout/item_rv_text.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:padding="10dp"
         android:gravity="center_vertical">
 
         <TextView
@@ -22,8 +22,8 @@
             android:text="@{data}"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:textSize="18sp"
-            android:maxLines="2"
+            android:textSize="13sp"
+            android:maxLines="1"
             android:ellipsize="end"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -33,12 +33,14 @@
             android:id="@+id/bt_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            tools:visibility="gone"
             android:text="上移"/>
 
         <Button
             android:id="@+id/bt_down"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            tools:visibility="gone"
             android:text="下移"/>
     </LinearLayout>
 
