--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
     <color name="colorBgBtnNormal">#60AB94</color>
     <color name="colorBgBtnGray">#9EABAA</color>
 
+    
+    <color name="color_half_transparent">#99212121</color>
+    
 </resources>
