--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,83 @@
             android:orientation="vertical"
             tools:context=".MainActivity">
 
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingVertical="10dp">
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tv_rotationY"
+                        android:layout_marginHorizontal="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="30dp"
+                        android:gravity="center"
+                        android:background="@drawable/bg_label"
+                        android:text="rotationY"/>
+
+                    <TextView
+                        android:id="@+id/tv_rotationY2"
+                        android:layout_marginHorizontal="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="30dp"
+                        android:gravity="center"
+                        android:background="@drawable/bg_label"
+                        android:text="-rotationY"/>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_rotationX"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="30dp"
+                        android:gravity="center"
+                        android:background="@drawable/bg_label"
+                        android:text="rotationX"/>
+
+                    <TextView
+                        android:id="@+id/tv_rotationX2"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="30dp"
+                        android:gravity="center"
+                        android:background="@drawable/bg_label"
+                        android:text="-rotationX"/>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+                <TextView
+                    android:id="@+id/tv_translationZ"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:gravity="center"
+                    android:layout_marginVertical="10dp"
+                    android:background="@drawable/bg_label"
+                    android:text="translationZ"/>
+                <TextView
+                    android:id="@+id/tv_translationZ2"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:gravity="center"
+                    android:background="@drawable/bg_label"
+                    android:text="-translationZ"/>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
             <com.google.android.material.button.MaterialButton
                 android:padding="10dp"
                 android:id="@+id/bt_pickerView"
