common_base_util: 新增 ViewPager common_base_ui  : 新增 AccessbilityExt.kt扩展类与demo

--- a/app/src/main/res/layout/ac_surface.xml
+++ b/app/src/main/res/layout/ac_surface.xml
@@ -20,5 +20,9 @@
 
         </FrameLayout>
 
+       <!-- <include
+            android:id="@+id/included"
+            layout="@layout/item_rv_img"/>-->
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
