common_base_util: 新增 ViewPager common_base_ui  : RvScrollWindownActivity待修改

--- a/app/src/main/res/layout/ac_rv.xml
+++ b/app/src/main/res/layout/ac_rv.xml
@@ -17,6 +17,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAllCaps="false"
+            android:onClick="goScroll"
+            android:text="go ScrollWindownImage Ac"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
             android:onClick="goDrag"
             android:text="go drag Rv Ac"/>
 
