--- a/app/src/main/res/layout/ac_text_view.xml
+++ b/app/src/main/res/layout/ac_text_view.xml
@@ -38,4 +38,13 @@
 \n这是标题，该标题的名字比较长，产品要求不换行全部显示出来\n这是标题，该标题的名字比较长，产品要求不换行全部显示出来"
         android:textSize="18sp" />
 
+
+    <com.fido.common.textview.AnimatorMaskTextView
+        android:id="@+id/maskTextView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
