--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="colorWheelView">#8024AC83</color>
     <color name="colorBgBtnText">#00B0FF</color>
     <color name="colorBgBtnNormal">#60AB94</color>
-    <color name="colorBgBtnGray">#9EABAA</color>
+    <color name="colorBgBtnGray">#FF9EABAA</color>
 
     
     <color name="color_half_transparent">#99212121</color>
