common_base_util: 新增ViewPage2的扩展，可动态添加删除Fragment,支持绑定View(暂不支持动态添加删除View) common_base_ui  :

--- a/app/src/main/res/layout/ac_dialog_chain.xml
+++ b/app/src/main/res/layout/ac_dialog_chain.xml
@@ -21,7 +21,7 @@
 
     <Button
         android:id="@+id/bt"
-        android:text="芝麻开门"
+        android:text="展示RvItem个弹窗，顺序为倒叙展示"
         android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
