--- a/app/src/main/res/layout/ac_asm_test.xml
+++ b/app/src/main/res/layout/ac_asm_test.xml
@@ -6,11 +6,32 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:id="@+id/tv"
+            android:text="0"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/bt1"
-            android:text="asm修改后吐司内容，原内容111"
+            android:text="asm修改后静态方法调用显示吐司"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/bt_uncheck"
+            android:text="添加UnCheckViewOnClick注解后点击"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/bt2"
+            android:text="asm修改后防抖点击"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
