common_base_util: ASM修改局部变量 common_base_ui  :

--- a/app/src/main/res/layout/ac_asm_test.xml
+++ b/app/src/main/res/layout/ac_asm_test.xml
@@ -47,6 +47,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <Button
+            android:id="@+id/bt66"
+            android:text="asm test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <com.fido.common.common_utils.widgets.CircleImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
