--- a/app/src/main/res/layout/ac_device_info.xml
+++ b/app/src/main/res/layout/ac_device_info.xml
@@ -20,6 +20,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="以下按钮未修改字节码之前吐司按钮内容"/>
             <Button
                 android:id="@+id/bt1"
                 android:layout_width="match_parent"
