--- a/app/src/main/res/layout/ac_custom_view.xml
+++ b/app/src/main/res/layout/ac_custom_view.xml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="i am a TextView"/>
+            <Button
+                android:id="@+id/button"
+                android:text="i am a Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bg"/>
+        </LinearLayout>
+
+        <com.fido.common.common_base_ui.widget.ninegrid.NineGridLayout
+            android:id="@+id/nineGridView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:horizontal_spacing="10dp"
+            app:vertical_spacing="10dp"
+            android:background="#f1f1f1">
+
+        </com.fido.common.common_base_ui.widget.ninegrid.NineGridLayout>
 
         <com.fido.common.common_utils.widgets.CodeRainView
             android:id="@+id/codeRainView"
