--- a/app/src/main/res/layout/ac_sp_test.xml
+++ b/app/src/main/res/layout/ac_sp_test.xml
@@ -39,6 +39,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="data_store vale"/>
+        <TextView
+            android:id="@+id/tv_data_store"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="null"/>
+        <Button
+            android:id="@+id/bt_add_data"
+            android:text="新增DataStore Value"
+            android:textAllCaps="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mRv"
             android:layout_width="match_parent"
