--- a/common_base_ui/src/main/res/values/attrs.xml
+++ b/common_base_ui/src/main/res/values/attrs.xml
@@ -55,4 +55,23 @@
     </declare-styleable>
 
 
+    <declare-styleable name="NineGridLayout">
+        <!--    默认的间距    -->
+        <attr name="spacing" format="dimension" />
+        <!--    横向间距    -->
+        <attr name="horizontal_spacing" format="dimension" />
+        <!--    纵向间距    -->
+        <attr name="vertical_spacing" format="dimension" />
+        <!--    是否开启单图模式    -->
+        <attr name="single_mode" format="boolean" />
+        <!--    是否开启四宫格模式    -->
+        <attr name="four_gird_mode" format="boolean" />
+        <!--    单图模式下指定宽高    -->
+        <attr name="single_mode_width" format="dimension" />
+        <!--    单图模式下指定宽高    -->
+        <attr name="single_mode_height" format="dimension" />
+
+    </declare-styleable>
+
+
 </resources>
