--- a/app/src/main/res/layout/ac_design_pattern.xml
+++ b/app/src/main/res/layout/ac_design_pattern.xml
@@ -8,6 +8,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"/>
+
         <Button
             android:id="@+id/bt_strategy_mode"
             android:layout_width="match_parent"
