common_base_util: common_base_ui  : fido_asm        : PS              : 射击模式 ImageViewExt.kt 新增Glide下载超时处理(通过协程suspendCancellableCoroutine上层拦截)

--- a/app/src/main/res/layout/ac_design_pattern.xml
+++ b/app/src/main/res/layout/ac_design_pattern.xml
@@ -15,10 +15,30 @@
             android:textColor="@color/black"/>
 
         <Button
+            android:id="@+id/bt_coroutine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="协程test"/>
+
+        <Button
             android:id="@+id/bt_strategy_mode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="策略模式"/>
+
+        <Button
+            android:id="@+id/bt_dialog_chain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="弹窗链模式"/>
+
+        <Button
+            android:id="@+id/bt_dialog_queue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="弹窗队列方式"/>
 
         <Button
             android:id="@+id/bt_loadApk"
