--- a/app/src/main/res/layout/ac_jetpack.xml
+++ b/app/src/main/res/layout/ac_jetpack.xml
@@ -15,6 +15,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <Button
+            android:id="@+id/bt_coroutine"
+            android:text="Coroutine"
+            android:textAllCaps="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
