--- a/app/src/main/res/layout/fragment_coroutine_test.xml
+++ b/app/src/main/res/layout/fragment_coroutine_test.xml
@@ -5,43 +5,73 @@
 
     </data>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:autoLink="web"
-            android:text="Glide下载超时解决方案,通过协程withTimeout直接上层处理：\nhttps://juejin.cn/post/7265332526544814119"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/bt_withTimeout"
-            android:textAllCaps="false"
-            android:text="测试协程 withTimeout结果"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/bt_glide_withTimeout_fail"
-            android:textAllCaps="false"
-            android:text="协程 withTimeout处理 Glide下载图片超时(失败处理)"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/bt_glide_withTimeout"
-            android:textAllCaps="false"
-            android:text="协程 withTimeout处理 Glide下载图片超时(成功处理)"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tv_img_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:id="@+id/iv_glide_load"
-            android:layout_width="200dp"
-            android:layout_height="100dp"/>
+            <TextView
+                android:autoLink="web"
+                android:text="Glide下载超时解决方案,通过协程withTimeout直接上层处理：\nhttps://juejin.cn/post/7265332526544814119"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/bt_withTimeout"
+                android:textAllCaps="false"
+                android:text="测试协程 withTimeout结果"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/bt_glide_withTimeout_fail"
+                android:textAllCaps="false"
+                android:text="协程 withTimeout处理 Glide下载图片超时(失败处理)"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/bt_glide_withTimeout"
+                android:textAllCaps="false"
+                android:text="协程 withTimeout处理 Glide下载图片超时(成功处理)"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_img_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <ImageView
+                android:id="@+id/iv_glide_load"
+                android:layout_width="150dp"
+                android:layout_height="80dp"/>
+
+            <TextView
+                android:id="@+id/tv_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="@color/black"
+                android:text="suspendCancellableCoroutine 和 suspendCoroutine 区别SuspendCancellableCoroutine 返回一个 CancellableContinuation， 它可以用 resume、resumeWithException 来处理回调和抛出 CancellationException 异常。
+它与 suspendCoroutine的唯一区别就是 SuspendCancellableCoroutine 可以通过 cancel() 方法手动取消协程的执行，而 suspendCoroutine 没有该方法。"/>
+
+            <Button
+                android:id="@+id/suspend_coroutine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAllCaps="false"
+                android:text="使用suspendCancellableCoroutine暂停协程"/>
+
+            <Button
+                android:id="@+id/resume_coroutine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAllCaps="false"
+                android:text="使用suspendCancellableCoroutine恢复协程"/>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 </layout>
