common_base_util: common_base_ui  : fido_asm        : PS              : 测试淘宝UI

--- a/app/src/main/res/layout/item_rv_text.xml
+++ b/app/src/main/res/layout/item_rv_text.xml
@@ -20,6 +20,7 @@
             android:id="@+id/mTitle"
             tools:text="mTitle...................................."
             android:text="@{data}"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="13sp"
